[package]
name = "control_tower"
version = "0.1.0"
authors = ["Yara Yousef"]
edition = "2018"

# The release profile, used for `cargo build --release`.
[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true       # Enable Link Time Optimization
panic = 'abort'  # Abort on panic

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alcro = "0.1.3"
rust-embed = {version = "5.5.1", features = ["interpolate-folder-path"]}
rocket = "0.4.4"
[dependencies.rocket_contrib]
version = "0.4.4"
defaullt-features = false
features = ["tera_templates", "serve"]
self_update = "0.15.0"
[dependencies.rusqlite]
version = "0.23.1"
features = ["bundled"]
