[package]
name = "scct"
description = "Supply Chain Control Tower"
version = "0.1.0"
authors = ["Hasan Yousef"]
edition = "2018"

# The release profile, used for `cargo build --release`.
[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true       # Enable Link Time Optimization
panic = 'abort'  # Abort on panic

# Strip the build executable (if not on Windows): $ strip target/release/hello_world

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opencv = {version = "0.36", features = ["buildtime-bindgen"]}
rocket = "0.4.4"
rust-embed = {version = "5.5.1", features = ["interpolate-folder-path"]}
serde = "1.0.106"
serde_json = "1.0.52"
serde_derive = "1.0.106"
regex = {version = "1.3.7", features = ["std"]}
tungstenite = "0.10.1"
alcro = "0.1.0"
maud = {version = "0.21.0", features = ["rocket"]}
self_update = "0.15.0"

[dependencies.rusqlite]
version = "0.23.1"
features = ["bundled"]

[dependencies.rocket_contrib]
version = "0.4.4"
defaullt-features = false
features = ["tera_templates", "serve"]
