[package]
name = "tera"
version = "0.1.0"
authors = ["Yara Yousef"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.4"

[dependencies.rocket_contrib]
version = "0.4.4"
defaullt-features = false
features = ["tera_templates", "serve"]
